Closed
Bug 313101
Opened 20 years ago
Closed 19 years ago
HTTP auth dialog is titled "Prompt"
Categories
(Core :: Networking: HTTP, defect)
Core
Networking: HTTP
Tracking
()
RESOLVED
FIXED
mozilla1.8.1beta1
People
(Reporter: jruderman, Assigned: darin.moz)
References
(Blocks 1 open bug, )
Details
(Keywords: fixed1.8.1, polish)
Attachments
(1 file, 1 obsolete file)
|
3.80 KB,
patch
|
mconnor
:
review+
mconnor
:
approval-branch-1.8.1+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Try to load http://www.squarefree.com/stats/
Result: HTTP Auth dialog comes up. Its title is "Prompt".
Expected: A title like "Firefox" or "Password required". (Beltzner?)
| Reporter | ||
Comment 1•20 years ago
|
||
Happens on Mac too (with Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US;
rv:1.9a1) Gecko/20051019 Firefox/1.6a1). On Mac, the title is shown in bold in
the body of the sheet.
OS: Windows XP → All
Hardware: PC → All
| Reporter | ||
Comment 2•20 years ago
|
||
Originally reported by Burning Edge reader Moktoipas as a comment on
http://www.squarefree.com/burningedge/2005/10/19/2005-10-19-branch-builds/.
Comment 4•20 years ago
|
||
Note that this is the same as in 1.0.7, so in answer to Matthias' question on
the Burning Edge, "yes, this seems to be normal."
That doesn't make it right, of course. "Password Requested" sounds right to me. :)
Comment 5•20 years ago
|
||
well, the dialog hasn't had a title at least since 1.2 <darin@netscape.com>
2001-05-11 14:03
(I didn't feel like trying to find the file where this code was in earlier...)
| Reporter | ||
Updated•20 years ago
|
Comment 6•20 years ago
|
||
This changes the default title for PromptUsernameAndPassword and PromptPassword, for Firefox and Seamonkey. I guess this might be better if this had an explicit title instead of falling back to the default (which is what I assume the dependency on bug 265780 is about), but I don't think that should prevent us from using a better default, right?
Comment 7•19 years ago
|
||
*** Bug 333522 has been marked as a duplicate of this bug. ***
Updated•19 years ago
|
Updated•19 years ago
|
Attachment #215600 -
Flags: superreview?(darin)
Attachment #215600 -
Flags: review?(mconnor)
Updated•19 years ago
|
Attachment #215600 -
Flags: review?(neil)
Comment 8•19 years ago
|
||
Comment on attachment 215600 [details] [diff] [review]
patch?
So, this will probably seem insane, but for localizers to be aware of the change, we have to change the property name, otherwise they don't know we've updated the string in en-US and they need to retranslate...
Attachment #215600 -
Flags: superreview?(darin)
Attachment #215600 -
Flags: review?(neil)
Attachment #215600 -
Flags: review?(mconnor)
Attachment #215600 -
Flags: review-
| Assignee | ||
Comment 9•19 years ago
|
||
Are you serious? That message has not been widespread enough. I see changes to strings happening all the time. Are you sure that's the best solution? Why don't they just check bonsai logs?
Comment 10•19 years ago
|
||
As far as I know, they mostly rely on the result of compare-locales, which is run on the l10n tinderboxen. It only shows failure if keys are added or removed (or renamed). I thought the rule was therefore that the requirement was to change the key if it's semantics change, not every time it's value changes.
Comment 11•19 years ago
|
||
Though I notice that most other locales have just translated the en-US string directly. Changing the key will let them know to make the same improvement we're making.
Comment 12•19 years ago
|
||
I don't know about you but it prompts "Password" when I try that URL.
| Assignee | ||
Comment 13•19 years ago
|
||
Attachment #215600 -
Attachment is obsolete: true
Attachment #225443 -
Flags: review?
| Assignee | ||
Updated•19 years ago
|
Attachment #225443 -
Flags: review? → review?(mconnor)
| Assignee | ||
Updated•19 years ago
|
Attachment #225443 -
Flags: approval-branch-1.8.1?(mconnor)
Updated•19 years ago
|
Attachment #225443 -
Flags: review?(mconnor)
Attachment #225443 -
Flags: review+
Attachment #225443 -
Flags: approval-branch-1.8.1?(mconnor)
Attachment #225443 -
Flags: approval-branch-1.8.1+
| Assignee | ||
Comment 14•19 years ago
|
||
fixed-on-trunk, fixed1.8.1
You need to log in
before you can comment on or make changes to this bug.
Description
•