fixes bug 313101 "HTTP auth dialog is titled 'Prompt'" patch by gavin sharp and darin, r=mconnor